--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ dark_footer: false           # keep the footer dark
 # style: minimal             # use a simpler style inspired by the minima theme
 
 navigation:                  # site navigation in the header
-  - README.md
+  - about.md
 #  - Github: "http://github.com/niklasbuschmann/contrast"
 
 #icons:                      # icons in the header, see http://fontawesome.com/icons
